# rift-rust

./: .gitignore  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  README.adoc  README.md  deny.toml
.github/workflows/: ci.yml  publish.yml  security.yml
benches/: message_model.rs  storage_memory.rs
doc/: architecture.adoc  examples.adoc  getting-started.adoc  index.adoc
rifts/: Cargo.toml
rifts-broker/: Cargo.toml
rifts-broker/src/: lib.rs
rifts-broker/src/broker/: broker.rs  fanout.rs  memory_broker.rs  mod.rs  router.rs
rifts-broker/src/broker/fanout/: conn_sink.rs
rifts-broker/src/connection/: control.rs  mod.rs  reader.rs  writer.rs
rifts-client/: Cargo.toml
rifts-client/src/: config.rs  connection.rs  error.rs  events.rs  frame_builder.rs  heartbeat.rs  lib.rs  rift_client.rs  subscriber.rs
rifts-core/: Cargo.toml
rifts-core/src/: config.rs  error.rs  frame_codec.rs  lib.rs  metrics.rs
rifts-core/src/ack/: mod.rs
rifts-core/src/codec/: cbor.rs  codec.rs  json.rs  mod.rs
rifts-core/src/flow/: backpressure.rs  mod.rs
rifts-core/src/frame/: envelope.rs  mod.rs  types.rs
rifts-core/src/message/: command.rs  datagram.rs  event.rs  mod.rs  snapshot.rs  state.rs  stream.rs
rifts-core/src/protocol/: close.rs  error_code.rs  heartbeat.rs  hello.rs  mod.rs  version.rs
rifts-core/src/topic/: mod.rs  ordering.rs  profile.rs  retention.rs  store.rs
rifts-redis/: Cargo.toml
rifts-redis/src/: broker.rs  connection.rs  fanout.rs  lib.rs
rifts-redis/src/storage/: dedupe.rs  log.rs  mod.rs  offset.rs  snapshot.rs
rifts-session/: Cargo.toml
rifts-session/src/: lib.rs
rifts-session/src/session/: auth.rs  mod.rs  resume.rs  session.rs  store.rs
rifts-storage/: Cargo.toml
rifts-storage/src/: dedupe.rs  encode.rs  engine.rs  lib.rs  log.rs  offset.rs  snapshot.rs
rifts-transport/: Cargo.toml
rifts-transport/src/: lib.rs
rifts-transport/src/transport/: actix.rs  axum.rs  bridge.rs  mod.rs  ntex.rs  warp.rs  websocket.rs
rifts/benches/: ack_metrics.rs  broker_memory.rs  e2e_inprocess.rs  fanout.rs  flow_control.rs  frame_model.rs  message_model.rs  serde_codecs.rs  session_resume.rs  sled_store.rs  storage_memory.rs  throughput.rs  topic_store.rs  websocket_loop.rs  wire_frame.rs
rifts/benches/common/: mod.rs
rifts/examples/: redis_multi_instance.rs  update_benchmark_readme.rs  websocket_server.rs
rifts/src/: lib.rs  server.rs
rifts/tests/: integration.rs  redis_integration.rs
src/: config.rs  connection.rs  error.rs  lib.rs  server.rs
src/ack/: mod.rs
src/actor/: actor_ref.rs  registry.rs  topic_actor.rs
src/broker/: actor_broker.rs  broker.rs  fanout.rs  memory_broker.rs  mod.rs  remote_broker.rs  snapshot_store.rs  wire.rs
src/client/: connection.rs  rift_client.rs  subscriber.rs
src/cluster/: broker.rs  config.rs  connection.rs  gossip.rs  mod.rs  node.rs  router.rs  wire.rs
src/cluster/discovery/: mod.rs
src/flow/: backpressure.rs
src/message/: mod.rs
src/redis/storage/: log.rs  snapshot.rs
src/session/: auth.rs  offset_tracker.rs  resume.rs  session.rs
src/storage/: dedupe.rs  engine.rs  log.rs  mod.rs  offset.rs  snapshot.rs
src/topic/: store.rs
src/transport/: actix.rs  axum.rs  bridge.rs  frame_codec.rs  warp.rs  websocket.rs
tests/: redis_integration.rs
