[workspace]
resolver = "2"
members = [
  "rifts-core",
  "rifts-storage",
  "rifts-transport",
  "rifts-broker",
  "rifts-session",
  "rifts-redis",
  "rifts-client",
  "rifts",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
authors = ["Zhenyi <434836402@qq.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rift-proto/rifts"

[workspace.dependencies]
tokio = { version = "1", default-features = false }
tokio-tungstenite = { version = "0.29", features = ["url"] }
futures-util = { version = "0.3", features = ["sink"] }
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
uuid = { version = "1", features = ["v4", "v7"] }
ulid = "1"
parking_lot = "0.12"
dashmap = "6"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
sled = { version = "0.34" }
rand = { version = "0.10" }
axum = { version = "0.8", features = ["ws"] }
actix-web = { version = "4" }
actix-ws = { version = "0.4" }
warp = { version = "0.4", features = ["websocket"] }
ntex = { version = "3", features = ["ws"] }
redis = { version = "1.3.0", features = ["tokio-comp", "aio", "streams"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
criterion = { version = "0.8", features = ["async_tokio"] }
tempfile = "3"
