[package]
name = "rifts-client"
version.workspace = true
edition.workspace = true
description = "Async client SDK for the Rift Realtime Protocol with auto-reconnect, heartbeat, and typed events"

[features]
default = ["client"]
client = ["tokio-tungstenite", "rand", "uuid", "ulid", "thiserror", "rifts-transport/websocket"]
websocket = ["client"]

[dependencies]
rifts-core = { path = "../rifts-core" }
rifts-transport = { path = "../rifts-transport", optional = true }
tokio = { workspace = true, features = ["net", "rt", "sync", "time"] }
tokio-tungstenite = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
